{assign var=numeric_naming value=0}
{assign var=dir_admin_enabled value=1}
{foreach from=$App->user->getAuthGroups() item=group}
	{if $group->getConfig('wh_naming_numeric')}
		{assign var=numeric_naming value=1}
	{/if}
	{if $group->getConfig('dir_admin_disabled')}
		{assign var=dir_admin_enabled value=0}
	{/if}
{/foreach}


<b><u>MAP</u></b>
 - Getting rid of the IGB means we can use new technologies. So, background changes/improvements were done to the map.
 - Removed 'Mass Delete' mode. It has since been replaced by the two remove options in a systems right-click menu.
 	- 'Remove [systemname]': Removes that system.
 	- 'Remove connected systems': Removes all systems connected to this system. Remove a connection and then use this to remove that part of the chain!

{if $dir_admin_enabled}
<b><u>ADMIN</u></b>
 - CREST does not have the option (yet) to see corp-roles. Therefor, it is not possible to see who is a director.
 	Everyone that had admin, is now added to a usergroup that gives you admin roles instead. You can edit who is a member of that group to add/remove admins.
{/if}


<h3>August 3, 2016</h3>
<b><u>STATISTICS</u></b>
 - Updates to statistics/leaderboard.



<h3>April 28, 2016</h3>
<b><u>STATISTICS</u></b>
 - Statistics/leaderboard for non directors/admins could show an empty page.
<b><u>VIPPY</u></b>
 - Updated to <a href="https://community.eveonline.com/news/patch-notes/patch-notes-for-eve-online-citadel" target="_blank">Citadel</a> data export.



<h3>April 21, 2016</h3>
<b><u>STATISTICS</u></b>
 - Stat pages for previous months were broken. They are now available again.
<b><u>VIPPY</u></b>
 - Fixed adding or updating a capitalship in Profile. It could give errors on certain solarsystems.
 - wh.pasta.gg died and is replaced by <a href="http://wh.vps-city.com/" target="_blank">wh.vps-city.com</a>. Updated the links.



<h3>March 10, 2016</h3>
<b><u>STATISTICS</u></b>
 - Correctly track the amount of wormholes mapped.
<b><u>VIPPY</u></b>