@@ -90,10 +90,12 @@
 			<img src="/images/default/ui/fleet.png" align="left">
 			Add Fleet
 		</button>
+	<!--
 		<button id="exitFinderButton" class="right" onclick="showExitFinder();">
 			<img src="/images/default/ui/view.png" align="left">
 			Exit Finder
 		</button>
+	-->
         <div style="clear:both;"></div>
 	</div>
     <div id="characterRefreshSelector">
