@@ -10,17 +10,27 @@
 {/foreach}
 
 
+<h3>October 11, 2016</h3>
+<b><u>CREST</u></b>
+ - CREST is here. <a href="/help/crest" target="_blank">Tell me all about it</a>.
+ - Unfortunately, some features that depended on the IGB are now gone temporarily.
+  	- Set destination to a system
+  	- Exit finder
+  	These features are still possible with CREST, i just haven't gotten around to them yet. I expect to be able to add them in the coming days.
+
 <b><u>MAP</u></b>
  - Getting rid of the IGB means we can use new technologies. So, background changes/improvements were done to the map.
  - Removed 'Mass Delete' mode. It has since been replaced by the two remove options in a systems right-click menu.
  	- 'Remove [systemname]': Removes that system.
  	- 'Remove connected systems': Removes all systems connected to this system. Remove a connection and then use this to remove that part of the chain!
+ - Add a CITADEL signature type that behaves just like a POS signature.
 
 {if $dir_admin_enabled}
 <b><u>ADMIN</u></b>
  - CREST does not have the option (yet) to see corp-roles. Therefor, it is not possible to see who is a director.
  	Everyone that had admin, is now added to a usergroup that gives you admin roles instead. You can edit who is a member of that group to add/remove admins.
 {/if}
+
 
 
 <h3>August 3, 2016</h3>
